--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h2> i am sathosh </h2>
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, aspernatur?</p>
-    
+    <h2> i am from chennai</h2>
 </body>
 </html>
