--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h2> i am sathosh </h2>
+    <h1>Sathih changes</h1>
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, aspernatur?</p>
     <h2> i am from chennai</h2>
 </body>
