--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Sathih changes</h1>
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque, aspernatur?</p>
     <h2> i am from chennai</h2>
+    <h1>Chanegs fro mvs code by santhosh</h1>
 </body>
 </html>
