--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h2> i am from chennai</h2>
     <h1>Chanegs fro mvs code by santhosh</h1>
     <h2>I am the User</h2>
+     <h2>I am the User</h2>
+     <h2>I am the User</h2>
 </body>
 </html>
